<resources>
    <string name="app_name">airbnb</string>
    <string name="label_search">검색</string>
    <string name="label_wish">위시리스트</string>
    <string name="label_my">내 예약</string>
    <string name="search_hint">어디로 여행하세요?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar_label">여행 일정</string>
    <string name="sunday_label">일</string>
    <string name="monday_label">월</string>
    <string name="tuesday_label">화</string>
    <string name="wednesday_label">수</string>
    <string name="thursday_label">목</string>
    <string name="friday_label">금</string>
    <string name="saturday_label">토</string>
    <string name="detail_search_check">체크</string>
    <string name="remove">지우기</string>
    <string name="skip">건너뛰기</string>
    <string name="person_label">인원 입력</string>
    <string name="money_label">가격 범위</string>

    <string name="money_label_string">₩%s - ₩%s</string>
    <string name="check_in_label">체크인</string>
    <string name="book_cancel_label">예약 취소</string>
    <string name="search_header">근처의 인기여행지</string>

</resources>