<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.calendar.CalendarFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clo_day_label"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/airbnb_offWhite">

            <TextView
                android:id="@+id/tv_calendar_label"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHeight_percent="0.28"
                app:layout_constraintWidth_percent="0.6"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/calendar_label"/>

            <TextView
                android:id="@+id/tv_calendar_choice_day"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/tv_calendar_label"
                app:layout_constraintHeight_percent="0.4"
                app:layout_constraintWidth_percent="0.6"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="5월 23일 - 5월 26일"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clo_day"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/clo_day_label"
            app:layout_constraintHeight_percent="0.05">

            <TextView
                android:id="@+id/tv_sun"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintWidth_percent="0.12"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="end"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:paddingTop="10dp"
                android:text="@string/sunday_label"/>

            <TextView
                android:id="@+id/tv_mon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintWidth_percent="0.12"
                app:layout_constraintStart_toEndOf="@id/tv_sun"
                android:gravity="end"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:paddingTop="10dp"
                android:text="@string/monday_label"/>

            <TextView
                android:id="@+id/tv_tue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintWidth_percent="0.12"
                app:layout_constraintStart_toEndOf="@id/tv_mon"
                android:gravity="end"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:paddingTop="10dp"
                android:text="@string/tuesday_label"/>

            <TextView
                android:id="@+id/tv_wed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintWidth_percent="0.12"
                app:layout_constraintStart_toEndOf="@id/tv_tue"
                android:gravity="end"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:paddingTop="10dp"
                android:text="@string/wednesday_label"/>

            <TextView
                android:id="@+id/tv_thur"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintWidth_percent="0.12"
                app:layout_constraintStart_toEndOf="@id/tv_wed"
                android:gravity="end"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:paddingTop="10dp"
                android:text="@string/thursday_label"/>

            <TextView
                android:id="@+id/tv_fri"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintWidth_percent="0.12"
                app:layout_constraintStart_toEndOf="@id/tv_thur"
                android:gravity="end"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:paddingTop="10dp"
                android:text="@string/friday_label"/>

            <TextView
                android:id="@+id/tv_sat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintWidth_percent="0.12"
                app:layout_constraintStart_toEndOf="@id/tv_fri"
                android:gravity="end"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:paddingTop="10dp"
                android:text="@string/saturday_label"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_calendar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/clo_day"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_calendar"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>